<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/m1"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/yash_bhayani"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sal_college_of_engineering"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_8320351270"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/t6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yb"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>